# j-shell

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/cli/: core.h  menu.h  menu_definitions.h  plugin_test.h  plugins.h
src/: command.c  core.c  io_host.c  main.c  menu.c  menu_definitions.c  plugin_test.c  plugins.c
